Some minor changes.

--- a/recommendation_system_truncated_svd.ipynb
+++ b/recommendation_system_truncated_svd.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h3> In this recommendation system we will be using SVD to determine relevant movies to users based soley off user ratings. The basic philosphy here is that we are able to recomend movies based off user ratings and make inferences between users, movies and ratings to make predictions as to what movies might be good recommendations for a give user based of titles that they are interested in. The method we are using is a UV-Decomposition method (Truncated SVD), meaning we will decompose a utility matrix into three seperate matricies that will contain latent variables (variables that cannot be observed but determine hidden relationships in the data that contribute to what gets recommended) and will allow us to make inferences and generate recommendations for users.</h3>\n",
-    "<h3>Let's load in the 100k movie dataset which you can obtain from <a href = \"https://grouplens.org/datasets/movielens/100k/\">here</a>. I am using the dated version which is stable for those who want to replicate this analysis (I have included the data in <a href=\"\">this</a> github repo).</h3>"
+    "<h3>Let's load in the 100k movie dataset which you can obtain from <a href = \"https://grouplens.org/datasets/movielens/100k/\">here</a>. I am using the dated version which is stable for those who want to replicate this analysis.</h3>"
    ]
   },
   {
@@ -996,7 +996,7 @@
     "<ul>\n",
     "    <li> Efficiency - don't have to refer to high dimensional matricies, offers speed and scalability.</li>\n",
     "    <li>Predictions for new users - no review data is needed for new users, just titles they have viewed.</li>\n",
-    "</ul>\n",
+    "</ul><br />\n",
     "If testing this in production (A/B test, multiarm bandit comparing multiple recommender methods) you could derive metrics to indicate the click through rate of the recommended titles and then the engagement/user satisfaction based on explicit measures ratings etc. or by determining implicit ratings through relevent KPI measures or measurable metrics that indicate success, in our movie example perhaps this would be watched the full movie and then search for the next in a series - indicates 5 stars for the first movie etc.</h3>"
    ]
   }
