--- a/recommendation_system_truncated_svd.ipynb
+++ b/recommendation_system_truncated_svd.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> In this recommendation system we will be using SVD to determine relevant movies to users based soley off user ratings. The basic philosphy here is that we are able to recomend movies based off user ratings and make inferences between users, movies and ratings to make predictions as to what movies might be good recommendations for a give user based of titles that they are interested in. The method we are using is a UV-Decomposition method (Truncated SVD), meaning we will decompose a utility matrix into three seperate matricies that will contain latent variables (variables that cannot be observed but determine hidden relationships in the data that contribute to what gets recommended) and will allow us to make inferences and generate recommendations for users.</h3>\n",
+    "<h3> In this recommendation system we will be using Truncated SVD to determine relevant movies to users based soley off user ratings. The basic philosphy here is that we are able to recommend movies based off user ratings and make inferences between users, movies and ratings to make predictions as to what movies might be good recommendations for a given user based off titles that they are interested in. The method we are using is a UV-Decomposition method (Truncated SVD), meaning we will decompose a utility matrix into three seperate matricies that will contain latent variables (variables that cannot be observed but determine hidden relationships in the data that contribute to what gets recommended) and will allow us to make inferences and generate recommendations for users.</h3>\n",
     "<h3>Let's load in the 100k movie dataset which you can obtain from <a href = \"https://grouplens.org/datasets/movielens/100k/\">here</a>. I am using the dated version which is stable for those who want to replicate this analysis.</h3>"
    ]
   },
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Our movies data contains information about the movies including the whether it belongs to a certain genre or not. 1 if it is that genre, 0 if it's not. This product information is useful for content based recommendation systems, but we wont be using these features in this model.</h3>\n",
+    "<h3>Our movies data contains information about the movies including whether it belongs to a certain genre or not. 1 if it is that genre, 0 if it's not. This product information is useful for content based recommendation systems, but we wont be using these features in this model.</h3>\n",
     "<h3>Now let's join our user ratings to our movie data to get the movie titles.</h3>"
    ]
   },
@@ -457,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>So now we have our user ratings and movie titles, let's flatten/transform our data into a utility matrix so that we have n x m matrix where we have n users (as our index) and m movie titles (as our features). This is process in pandas is similar to the pivot function in sql and achieves the same thing. The resultant will be our utility matix, M.</h3>"
+    "<h3>So now we have our user ratings and movie titles, let's flatten/transform our data into a utility matrix so that we have n x m matrix where we have n users (as our index) and m movie titles (as our features). This process in pandas is similar to the pivot function in sql and achieves the same thing. The resultant will be our utility matix, M.</h3>"
    ]
   },
   {
@@ -792,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Now let's import TruncatedSVD from sklearn to decompose our matrix. This means we are attempting to find a matrix U that has n rows and d columns, a matrix V with d rows and m columns and a matrix $ \\Sigma$ that is a diagonal matrix that stores information about the decomposition process (referred to as singular values) and is all zeros off the diagonal and when combined approximate M. If successful then what we have here is the ability to relate users and movies, meaning that in d dimensions we can use an entry in product $U \\Sigma V$ to estimate the corresponding entry in M. This means we can fill in the blanks and complete our matrix. The feature reduction step we're taking here is compressing the user ratings down to 15 components that represent a summarized view of the users tastes.</h3>\n",
+    "<h3>Now let's import TruncatedSVD from sklearn to decompose our matrix. This means we are attempting to find a matrix U that has n rows and d columns, a matrix V with d rows and m columns and a matrix $ \\Sigma$ that is a diagonal matrix that stores information about the decomposition process (referred to as singular values) and is all zeros off the diagonal and when combined approximate M. If successful then what we have here is the ability to relate users and movies, meaning that in d dimensions we can use an entry in product $U \\Sigma V$ to estimate the corresponding entry in M. This means we can fill in the blanks and complete our matrix. The feature reduction step we're taking here is compressing the user ratings down to 15 components that are synthetic features that represent a summarized view of the users tastes.</h3>\n",
     "<h3>Now the Truncated SVD method is slightly different from the regular SVD method. As below, we see that our utility matrix M is approxiate by $U_k \\Sigma_k V_k^T$.</h3>\n",
     "<h3>$$M_k=U_k \\Sigma_k V_k^T$$</h3>\n",
     "<h3>Where $ \\Sigma $ is a diagonal matrix that stores information about the decomposition process.</h3>\n",
