--- a/recommendation_system_truncated_svd.ipynb
+++ b/recommendation_system_truncated_svd.ipynb
@@ -997,7 +997,7 @@
     "    <li> Efficiency - don't have to refer to high dimensional matricies, offers speed and scalability.</li>\n",
     "    <li>Predictions for new users - no review data is needed for new users, just titles they have viewed.</li>\n",
     "</ul><br />\n",
-    "If testing this in production (A/B test, multiarm bandit comparing multiple recommender methods) you could derive metrics to indicate the click through rate of the recommended titles and then the engagement/user satisfaction based on explicit measures ratings etc. or by determining implicit ratings through relevent KPI measures or measurable metrics that indicate success, in our movie example perhaps this would be watched the full movie and then search for the next in a series - indicates 5 stars for the first movie etc.</h3>"
+    "If testing this in production (A/B test, multiarm bandit comparing multiple recommender methods) you could derive metrics to indicate the click through rate of the recommended titles and then the engagement/user satisfaction based on explicit measures ratings etc. or by determining implicit ratings through relevent KPI measures or measurable metrics that indicate success, in our movies example here perhaps this would mean watching the full movie and then search for the next in a series - indicates 5 stars for the first movie etc.</h3>"
    ]
   }
  ],
